--- a/src/components/TweetCard/TweetCard.module.css
+++ b/src/components/TweetCard/TweetCard.module.css
@@ -80,7 +80,35 @@
     width: 196px;
     height: 50px;
 
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    text-transform: uppercase;
+
+    color: #373737;
     background: #EBD8FF;
+    border: none;
+    box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
+    border-radius: 10.3108px;
+
+}
+
+.tweet__activeButton {
+    margin-top: 10px;
+    margin-bottom: 36px;
+    padding: 14px 28px;
+
+    width: 196px;
+    height: 50px;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    text-transform: uppercase;
+
+    background: #5CD3A8;
+    color: #373737;
     border: none;
     box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
     border-radius: 10.3108px;
